--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
     "require": {
         "php": "^8.1",
         "phpunit/phpunit": "^9.5",
-        "guzzlehttp/guzzle": "^6.2@dev",
-        "symfony/dom-crawler": "^4.1@dev",
-        "symfony/css-selector": "^4.1@dev"
+        "guzzlehttp/guzzle": "^7.4",
+        "symfony/dom-crawler": "^6.1",
+        "symfony/css-selector": "^4.1@dev",
+        "ext-curl": "*"
     }
 }
